Working on spacing.. if grid layout works without mysterious padding issue.. we can continue.

--- a/src/components/CellRow.module.css
+++ b/src/components/CellRow.module.css
@@ -1,2 +1,4 @@
-.CellRow {
+.Cell {
+    border: 2px solid mediumpurple;
 }
+
