--- a/src/components/CellWorld.module.css
+++ b/src/components/CellWorld.module.css
@@ -1,3 +1,7 @@
 .CellWorld {
 
 }
+
+.CellRow {
+    /*border: 1px solid mediumpurple;*/
+}
